# FPGA_DES_Encryption

./: README.md  des.cpp  des.h  des.md  des_tb.cpp  des_tb.h
_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_14148.py  workspace_journal_16744.py  workspace_journal_6372.py
chacha20/: chacha_kernel.cpp  compile_commands.json  hls_config.cfg  test_chacha.cpp  vitis-comp.json
chacha20/.cache/clangd/index/: chacha_kernel.cpp.492D61D67AE49D56.idx  chacha_kernel.cpp.CC51D2C6FD848F83.idx  test_chacha.cpp.E83217A72AC188D8.idx  test_chacha.cpp.F386F576378F2A5D.idx
chacha20/chacha20/: chacha20.hlscompile_summary  chacha20.hlsrun_csim_summary  vitis-comp.json
chacha20/chacha20/hls/: config.cmdline  hls_data.json
chacha20/chacha20/hls/.debug/: chacha20_kernel.protoinst
chacha20/chacha20/hls/impl/misc/drivers/chacha20_kernel_v1_0/src/: CMakeLists.txt  Makefile  xchacha20_kernel_hw.h  xchacha20_kernel_sinit.c
chacha20/chacha20/reports/: hls_compile.rpt  v++_compile_chacha20_guidance.html
chacha20/chacha20/reports/.db/: v++_compile_chacha20_guidance.pb3
des_crypto/: compile_commands.json  hls_config.cfg  vitis-comp.json
des_crypto/.cache/clangd/index/: des.cpp.55E088B34EB9ED81.idx  (+1 more)
des_crypto/des_crypto/: des_crypto.hlscompile_summary  des_crypto.hlsrun_cosim_summary  des_crypto.hlsrun_csim_summary  vitis-comp.json
des_crypto/des_crypto/hls/: config.cmdline  hls_data.json
des_crypto/des_crypto/reports/: hls_compile.rpt  hls_cosim.rpt  v++_compile_des_crypto_guidance.html
documents/: DES_FPGA_Presentation.pptx
(+278 files in other folders)
